Fix remote trace recording via chrome://inspect?tracing

This was regressed in two different places, first by
https://codereview.chromium.org/2515903002
and then by
https://codereview.chromium.org/2607833002

BUG=680170

Review-Url: https://codereview.chromium.org/2628863003
Cr-Commit-Position: refs/heads/master@{#443121}

Former-commit-id: 3a06f2645235a7de84376c6615553957e49d0563